[WIP] fabric_test.go [WIP] redundant github.com/golang/protobuf
