# app/fabric.go
@@ -1,19 +1,16 @@
 package app
 
 import (
+	"encoding/json"
+	"github.com/davidkhala/delphi-fabric/app/model"
 	"github.com/davidkhala/fabric-common/golang"
 	"github.com/davidkhala/goutils"
 	"github.com/davidkhala/goutils/crypto"
 	"github.com/davidkhala/goutils/grpc"
 	"github.com/gin-gonic/gin"
+	"github.com/golang/protobuf/proto"
 	"net/http"
 )
-
-type PingBody struct {
-	Address               string `json:"address"`
-	Certificate           string `json:"certificate"`
-	SslTargetNameOverride string `json:"ssl-target-name-override"`
-}
 
 // PingFabric
 // @Router /fabric/ping [post]
@@ -32,7 +29,7 @@ func PingFabric(c *gin.Context) {
 	certificate, err := crypto.ParseCertPem([]byte(certificatePEM))
 	if err != nil {
 		// support hex as secondary format, due to PEM linebreak issue
-		var decoded = goutils.HexDecode(certificatePEM)
+		var decoded = goutils.HexDecodeOrPanic(certificatePEM)
 		certificate, err = crypto.ParseCertPem(decoded)
 		if err != nil {
 			c.String(http.StatusBadRequest, "Bad request: [certificate]")
@@ -51,4 +48,41 @@ func PingFabric(c *gin.Context) {
 		return
 	}
 	c.String(http.StatusOK, "pong")
+}
+
+// BuildProposal
+// @Router /fabric/ping [post]
+// @Produce json
+// @Accept x-www-form-urlencoded
+// @Param channel path string true "fabric channel name"
+// @Param chaincode formData string true "fabric chaincode name"
+// @Param creator formData string true "certificate of signer"
+// @Param version formData string false "Optional. chaincode version"
+// @Param args formData string false "chaincode args, including function name [fcn]"
+// @Success 200 {object} model.ProposalResult
+func BuildProposal(c *gin.Context) {
+	channelName := c.Param("channel")
+	chaincode := c.PostForm("chaincode")
+	creator := model.BytesFromForm(c, "creator")
+	version := c.DefaultPostForm("version", "")
+
+	args := c.DefaultPostForm("args", "[]")
+	var arr []string
+	err := json.Unmarshal([]byte(args), &arr)
+	goutils.PanicError(err)
+	proposal, txid, err := golang.CreateProposal(
+		creator,
+		channelName,
+		chaincode,
+		version,
+		arr...,
+	)
+	goutils.PanicError(err)
+	proposalProto, err := proto.Marshal(proposal)
+	goutils.PanicError(err)
+	result := model.ProposalResult{
+		ProposalProto: model.BytesResponse(proposalProto),
+		Txid:          txid,
+	}
+	c.JSON(http.StatusOK, result)
 }
